fix tool tests and java runtime tests